corrected jumps when switching cities

--- a/develop/css/responcive.scss
+++ b/develop/css/responcive.scss
@@ -616,7 +616,7 @@
         font-size: 16px;
         padding-top: 5px;
     }
-    .open{
+    .footer__open{
         margin-top: 15px;
     }
     .cell__line-footer{
